2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/tmpl/hildon-note.sgml: code example, use slightly less funny
	string examples.

	* hildon-widgets/hildon-scroll-area.c
	(hildon_scroll_area_destroy): one-instruction function:
	removed. Call g_free directly.
	+ minor cleanup
	(hildon_scroll_area_size_allocate):When a scrollbar appears to the
	right edge of window, size of the child is also shrinked. 'fixed'
	does not automatically update this data -> Doing it manually.

	* hildon-widgets/hildon-date-editor.h: added
	HildonDateEditorErrorType error enumeration type, removed signal
	"validate-date" virtual function, added signal "date-error"
	virtual function.

	* hildon-widgets/hildon-date-editor.c (hildon_date_editor_date_error):
	added custom info prints.
	(hildon_date_editor_validate_date): removed
	(hildon_date_editor_entry_validate): validate maximum and minimum
	limits on each field.
	(hildon_date_editor_entry_focus_out): check the date validation
	in simpler manner, don't put content if field is empty (spec
	doesn't say if there should be anything placed in the entry if
	it is empty).
	(hildon_date_editor_get_date),
	(hildon_date_editor_get_month),
	(hildon_date_editor_get_year),
	(hildon_date_editor_get_day): use direct entry content, so that 0
	indicates empty entry, and information is more accurate.

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: Adjusted CFLAGS and removed -Werror due to the
	glib-2.0 flaw. See
	http://bugzilla.gnome.org/show_bug.cgi?id=310175 and
	http://bugzilla.gnome.org/show_bug.cgi?id=310216

2005-07-29  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-controlbar.h: added missing signal when end reached

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-number-editor.c: 
	(hildon_number_editor_select_all): new function, selects all
	the text in the entry.
	* hildon-widgets/hildon-number-editor.c: added several calls to