@@ -1,3 +1,8 @@
+2005-08-05  Luc Pionchon  <luc.pionchon@nokia.com>
+
+	* hildon-widgets/hildon-color-popup.c
+	(hildon_popup_palette_expose): removed debug printing
+
 2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>
 
 	* doc/tmpl/hildon-note.sgml: code example, use slightly less funny
